# ParallelFinalHistogram

./: OpenMP.cpp  README.md
CUDA/: 480.jfif  CMakeLists.txt  CUDA.cu
MPI_Histogram/: CMakeLists.txt  MPI_Histogram.cpp
OpenMp/: CMakeLists.txt  OpenMP.cpp
Sequential/: CMakeLists.txt  sequential.cpp
